# CMake_QT_06_Qml-Style

01_ButtonStyle/: main.qml
02_ButtonStyle Customized/: main.qml
02_ButtonStyle Customized/Styles/: MyButtonStyle.qml
03_MaterialStyle_setStyle/: 版本特性：setStyle.txt
03_MaterialStyle_setStyle/src/: CMakeLists.txt  main.cpp  main.qml  main.qrc
04_MaterialStyle_conf/src/: CMakeLists.txt  main.cpp  main.qml  main.qrc  qtquickcontrols2.conf
05_Imagine Style_conf/src/: CMakeLists.txt  main.qml  main.qrc
